# tcrdist_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: release_python.yml
database/: human_v_lookup.csv
docs/: requirements.txt
docs/source/: api.rst  conf.py  developer.rst  index.rst  install.rst  todo.rst
src/: distance.rs  lib.rs  match_table.rs
