[package]
name = "tcrdist_rs"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Rust tcrdist routines, including SMID-accelerated edit distances from triple_accel."
homepage = "https://github.com/zacmon/tcrdist_rs"
repository = "https://github.com/zacmon/tcrdist_rs"
readme = "README.md"
keywords = ["tcrdist"]
categories = ["algorithms", "science", "text-processing", "immune repertoires"]

[lib]
name = "tcrdist_rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3

[dependencies]
once_cell = "1.19.0"
pyo3 = {version = "0.20.3", features = ["extension-module", "anyhow", "multiple-pymethods", "abi3-py38"], optional=true}
rayon = "1.10.0"
thiserror = "1.0"
triple_accel = "0.4.0"

[features]
py_binds = ["pyo3"]
